--- a/index.html
+++ b/index.html
@@ -216,100 +216,23 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">
-            Nuestra <span class="title-accent">Oferta Académica</span>
+            Nuestras <span class="title-accent">Ofertas Académicas</span>
           </h2>
           <p class="section-subtitle">
             Carreras técnicas de nivel superior diseñadas para la industria
             actual, con docentes expertos y prácticas reales
           </p>
+              <img
+                src="imgs/Formacion_icono_2-2.png"
+                alt="Instituto Tecnológico El Molino"
+                class="hero-image-servicios"
+              />
         </div>
 
         <div class="programs-grid">
-          <!-- Tecnicaturas -->
-          <div class="program-card">
-            <div class="card-background"></div>
-            <div class="card-content">
-              <div class="card-icon">🎓</div>
-              <h3 class="card-title">Tecnicaturas</h3>
-              <p class="card-description">
-                Carreras de 3 años con título oficial y salida laboral inmediata
-              </p>
-
-              <div class="card-details">
-                <div class="detail-item">
-                  <span class="detail-label">Duración</span>
-                  <span class="detail-value">3 años</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Modalidad</span>
-                  <span class="detail-value">Presencial</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Próxima cohorte</span>
-                  <span class="detail-value">Agosto 2024</span>
-                </div>
-              </div>
-
-              <button class="card-btn">Ver carrera</button>
-            </div>
-          </div>
-
           <!-- Formación Profesional -->
-          <div class="program-card">
-            <div class="card-background"></div>
-            <div class="card-content">
-              <div class="card-icon">⚡</div>
-              <h3 class="card-title">Formación Profesional</h3>
-              <p class="card-description">
-                Programas intensivos para adquirir competencias específicas
-              </p>
-
-              <div class="card-details">
-                <div class="detail-item">
-                  <span class="detail-label">Duración</span>
-                  <span class="detail-value">6 meses</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Modalidad</span>
-                  <span class="detail-value">Híbrida</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Certificación</span>
-                  <span class="detail-value">Oficial</span>
-                </div>
-              </div>
-
-              <button class="card-btn">Ver programa</button>
-            </div>
-          </div>
-
-          <!-- Capacitaciones -->
-          <div class="program-card">
-            <div class="card-background"></div>
-            <div class="card-content">
-              <div class="card-icon">🚀</div>
-              <h3 class="card-title">Capacitaciones</h3>
-              <p class="card-description">
-                Cursos cortos y talleres prácticos para desarrollo profesional
-              </p>
-
-              <div class="card-details">
-                <div class="detail-item">
-                  <span class="detail-label">Duración</span>
-                  <span class="detail-value">1-3 meses</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Modalidad</span>
-                  <span class="detail-value">Online</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Inicio</span>
-                  <span class="detail-value">Mensual</span>
-                </div>
-              </div>
-
-              <button class="card-btn">Ver cursos</button>
-            </div>
+          <div class="card-content">
+            <button class="card-btn">Ver programa</button>
           </div>
         </div>
       </div>
@@ -320,104 +243,21 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">
-            Soluciones tecnológicas para <span class="title-accent">pymes</span>
+            <span class="title-accent">Servicios</span>
           </h2>
           <p class="section-subtitle">
             Asistencia técnica, capacitación y vinculación para potenciar el
             crecimiento de tu organización
           </p>
+              <img
+                src="imgs/ícono_servicios-150x150.png"
+                alt="Instituto Tecnológico El Molino"
+                class="hero-image-servicios"
+              />
         </div>
-
         <div class="services-grid">
-          <!-- Consultoría Tecnológica -->
-          <div class="service-card">
-            <div class="card-background"></div>
-            <div class="card-content">
-              <div class="card-icon">💻</div>
-              <h3 class="card-title">Consultoría Tecnológica</h3>
-              <p class="card-description">
-                Asesoramiento especializado en transformación digital y
-                optimización de procesos
-              </p>
-
-              <div class="card-details">
-                <div class="detail-item">
-                  <span class="detail-label">Tiempo</span>
-                  <span class="detail-value">2-4 semanas</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Modalidad</span>
-                  <span class="detail-value">In-company</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Entrega</span>
-                  <span class="detail-value">Reporte + Plan</span>
-                </div>
-              </div>
-
-              <button class="card-btn">Solicitar Consulta</button>
-            </div>
-          </div>
-
           <!-- Capacitación Corporativa -->
-          <div class="service-card">
-            <div class="card-background"></div>
-            <div class="card-content">
-              <div class="card-icon">👥</div>
-              <h3 class="card-title">Capacitación Corporativa</h3>
-              <p class="card-description">
-                Programas de formación personalizados para equipos y
-                organizaciones
-              </p>
-
-              <div class="card-details">
-                <div class="detail-item">
-                  <span class="detail-label">Duración</span>
-                  <span class="detail-value">1-6 meses</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Modalidad</span>
-                  <span class="detail-value">In-company</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Certificación</span>
-                  <span class="detail-value">Oficial</span>
-                </div>
-              </div>
-
-              <button class="card-btn">Solicitar Propuesta</button>
-            </div>
-          </div>
-
-          <!-- Desarrollo de Software -->
-          <div class="service-card">
-            <div class="card-background"></div>
-            <div class="card-content">
-              <div class="card-icon">🚀</div>
-              <h3 class="card-title">Desarrollo de Software</h3>
-              <p class="card-description">
-                Soluciones a medida para automatizar y optimizar tus operaciones
-                empresariales
-              </p>
-
-              <div class="card-details">
-                <div class="detail-item">
-                  <span class="detail-label">Tiempo</span>
-                  <span class="detail-value">1-3 meses</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Tecnología</span>
-                  <span class="detail-value">Web + Móvil</span>
-                </div>
-                <div class="detail-item">
-                  <span class="detail-label">Soporte</span>
-                  <span class="detail-value">6 meses</span>
-                </div>
-              </div>
-
-              <button class="card-btn">Solicitar Cotización</button>
-            </div>
-          </div>
+          <button class="card-btn">Solicitar Propuesta</button>
         </div>
 
         <!-- CTA para Empresas que Educan -->
@@ -552,7 +392,7 @@
                   <div class="contact-icon">📍</div>
                   <div class="contact-details">
                     <h4>Dirección</h4>
-                    <p>Av. Principal 123, El Molino</p>
+                    <p>Rivadavia 1390, El Molino</p>
                   </div>
                 </div>
 
@@ -586,7 +426,7 @@
           <div class="map-container">
             <div class="map-card">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.016887889546!2d-58.3815704!3d-34.6037388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDM2JzEzLjQiUyA1OMKwMjInNTMuNyJX!5e0!3m2!1ses!2sar!4v1234567890"
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d850.862896946984!2d-60.9296924!3d-31.4567615!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5133d054ac1dd%3A0x9896a038fd05cf16!2sFundaci%C3%B3n%20Instituto%20Tecnol%C3%B3gico%20%22El%20Molino%22!5e0!3m2!1ses-419!2sar!4v1756246218218!5m2!1ses-419!2sar"
                 width="100%"
                 height="400"
                 style="border: 0"
@@ -632,42 +472,24 @@
           </div>
 
           <div class="footer-section">
-            <h4>Oferta Académica</h4>
-            <ul class="footer-links">
-              <li><a href="#carreras">Tecnicaturas</a></li>
-              <li><a href="#carreras">Formación Profesional</a></li>
-              <li><a href="#carreras">Capacitaciones</a></li>
-              <li><a href="#servicios">Servicios a Empresas</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-section">
             <h4>Contacto</h4>
             <ul class="footer-links">
-              <li>📍 Av. Principal 123, El Molino</li>
+              <li>📍 Rivadavia 1390, El Molino</li>
               <li>📞 +54 11 1234-5678</li>
               <li>✉️ info@institutomolino.edu.ar</li>
               <li>🕒 Lun-Vie: 8:00 - 22:00</li>
             </ul>
           </div>
-        </div>
-
-        <div class="footer-bottom">
-          <div class="footer-social">
-            <a href="#" class="social-link" aria-label="Facebook">
-              <span class="social-icon">📘</span>
-            </a>
-            <a href="#" class="social-link" aria-label="Instagram">
-              <span class="social-icon">📷</span>
-            </a>
-            <a href="#" class="social-link" aria-label="LinkedIn">
-              <span class="social-icon">💼</span>
-            </a>
-            <a href="#" class="social-link" aria-label="YouTube">
-              <span class="social-icon">📺</span>
-            </a>
+          
+          <div class="footer-section">
+            <h4><a href="https://www.facebook.com/itecelmolinoesperanza/" class="social-link" aria-label="Facebook">📘</a>  Facebook</h4>
+            <h4><a href="https://www.instagram.com/itecelmolino/?hl=es" class="social-link" aria-label="Instagram">📷</a>  Instagram</h4>
+            <h4><a href="https://www.youtube.com/channel/UCNzjGtY_djCCKAjd4udFV_g" class="social-link" aria-label="YouTube">📺</a>  YouTube</h4>
+            <h4><a href="https://x.com/itecelmolino?lang=es" class="social-link" aria-label="YouTube">🗣️</a>X</h4>
+            <h4><a href="https://www.linkedin.com/company/itec-el-molino/?originalSubdomain=ar" class="social-link" aria-label="YouTube">💼</a>  Linkedin</h4>
           </div>
-
+        </div>
+        <div class="footer-bottom">
           <div class="footer-copyright">
             <p>
               &copy; 2024 Instituto Tecnológico El Molino. Todos los derechos
